sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:13: error: Unmatched closing brace '}' ignored here
      gap=11 }
             ^